--- a/NodeJS_Course/package.json
+++ b/NodeJS_Course/package.json
@@ -22,7 +22,8 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^2.0.4",
     "pug": "^3.0.0",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {},
   "scripts": {
